# comparative-performance-analysis-al-ner

./: README.md  main.py  mlflow_utils.py  plot_utils.py  pyproject.toml
google_sheet/: experiments_mlflow.csv
mlflow/: accuracy_per_label.csv  bias.csv  bias_distr_diff.csv  bias_log_distr_diff.csv  data_distribution.csv  ece.csv  error_per_label.csv
results/: annotation_diff_ratio_mean.csv  auc.csv  auc_diff.csv  auc_overall.csv  corpus_overall.csv  domain_wilcoxon.csv  gain_overall.csv  heatmap.csv  overall_wilcoxon.csv  proposing_duration_overall.csv  robustness.csv
