[tool.poetry]
name = "al-analysis"
version = "2.4.3"
description = "Comparative Performance Analysis of Active Learning Strategies for the Entity Recognition Task"
authors = ["Philipp Kohl <p.kohl@fh-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
mlflow = "^2.17.0"
pandas = "^2.2.3"
tqdm = "^4.66.5"
plotly = "^5.24.1"
scipy = "^1.14.1"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"